# t4

./: .gitignore  README.md  terminal-time-tracking-tool.cabal
.github/workflows/: haskell-ci.yml
app/: App.hs
exe-t4-api/: API.hs
exe-t4-api/static/: report.html
exe-t4-commands/: Commands.hs
exe-t5-interactive/: TUI.hs
lib/: Completion.hs  MyLib.hs  T4.hs  Util.hs
lib/T4/: Data.hs  Report.hs  Storage.hs
t4-commands/: Commands.hs
t4-tui/: TUI.hs
t4-tui/TUI/: Widgets.hs
test/: CompletionSpec.hs  MyLibSpec.hs  T4Spec.hs  UtilSpec.hs
test/T4/: DataSpec.hs  ReportSpec.hs  StorageSpec.hs
