cabal-version:        3.0
name:                 terminal-time-tracking-tool
version:              0.1.0.0
license:              MIT
license-file:         LICENSE
author:               Mirko Westermeier
maintainer:           mirko@westermeier.de
build-type:           Simple

common basics
  default-language:   Haskell2010
  default-extensions: TemplateHaskell
                    , OverloadedStrings
                    , TupleSections
                    , GeneralizedNewtypeDeriving
  ghc-options:        -Wall
  build-depends:      base
                    , containers
                    , filepath
                    , directory
                    , extra
                    , time
                    , aeson
                    , yaml
                    , regex-tdfa
                    , text
                    , brick

library
  import:             basics
  exposed-modules:    T4.Data
                    , T4.Storage
                    , T4.Report
                    , Completion
                    , Util
  hs-source-dirs:     lib

executable t4
  import:             basics
  build-depends:      terminal-time-tracking-tool
  hs-source-dirs:     app
  main-is:            App.hs

test-suite t4-test
  import:             basics
  ghc-options:        -Wno-orphans
  type:               exitcode-stdio-1.0
  build-depends:      terminal-time-tracking-tool
                    , hspec
                    , QuickCheck
                    , quickcheck-instances
                    , temporary
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      T4.DataSpec
                    , T4.StorageSpec
                    , T4.ReportSpec
                    , CompletionSpec
                    , UtilSpec
  hs-source-dirs:     test
  main-is:            run-all-tests.hs
